--- a/PIA.html
+++ b/PIA.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Tienda de Tennis</h1>
+    <h1>Tienda de Juegos</h1>
     <div class="contenedor">
         <div class="producto">
             <img src="c:\Users\Gerardo Dávila Leal\Pictures\Screenshots\zelda.jpg">
